docker-11: got a clean workspace again after setting execution environment to Java-11